# machine-perception-21S

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/: evaluate.py  evaluate_val.py  train.py  visualize.py
src/models/: AttModel.py  ConvAttModel.py  GCN4attn.py  GCNAttModel.py  GCN_model.py  LSTM_model.py  __init__.py  base_model.py  cnn_model.py  dummy_model.py  fcn_model.py  models.py
src/utilities/: configuration.py  data.py  data_transforms.py  fk.py  losses.py  motion_metrics.py  utils.py  visualize.py
